adjusting the primary and the secondary color

--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -2,8 +2,12 @@
 $font-family-sans-serif: 'Roboto';
 
 // Colors
-$primary: #00e676 ; 
-$secondary: #424c63;
+$primary: #4169E1 ;
+$secondary: #E0FFFF;
+
+
+// $primary: #00e676 ; 
+// $secondary: #424c63;
 $dark: #32323a;
 $light: #f7f7f7 ;
 
